tests/NormalTests/paczka1/fuzzy1/67332179.err
Error in line 5: fhGh S934 39,5
Error in line 10: fhGh S894 76,8
Error in line 8: 7CDnnb9G4G A121 2,5
Error in line 22: 7CDnnb9G4G S50 161,1
